@@ -1,10 +1,9 @@
 [Desktop Entry]
-Encoding=UTF-8
-_Name=GParted
-_Comment=GNOME Partition Editor
-Exec=gparted
-Icon=gparted.png
+_Name=GParted Partition Editor
+_Comment=Create, reorganize, and delete partitions
+Exec=gksu gparted
+Icon=gparted
 Terminal=false
 Type=Application
-Categories=GNOME;Application;System;
+Categories=GNOME;System;
 StartupNotify=true
