@@ -1,5 +1,16 @@
 2008-04-09  Curtis Gedak  <gedakc@gmail.com>
 
+	* gparted.desktop.in: Updated to align with standards
+	  - Adjusted entries to align with desktop entry specification
+	    - Closes GParted bug #518975
+	  - Added gksu to Exec line in front of gparted
+	    - Closes GParted bug #381557
+	  - Updated to align with Human Interface Guidelines
+	    - Closes GParted bug #440012
+
+	* src/Makefile.am: Moved gparted install to sbin instead of bin
+	  - Closes GParted bug #509495
+
 	* MAINTAINERS: Added ldetrogoff
 
 2008-04-08  Curtis Gedak  <gedakc@gmail.com>
